Copyleft: Reformatted run-on sentences, added footnotes

--- a/notes/why-copyleft.htm
+++ b/notes/why-copyleft.htm
@@ -34,8 +34,8 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- posted 2022/2/5 -->
-<!-- updated 2022/9/10 -->
-<p><span class="right">🌑 Sat, Sep 10th, 2022</span></p>
+<!-- updated 2022/9/12 -->
+<p><span class="right">🌑 Mon, Sep 12th, 2022</span></p>
 <h1>On Copyleft and why I use GPLv3<span id="On-Copyleft-and-why-I-use-GPLv3"></span></h1>
 <p>This is a short outline on guaranteeing creative freedom to users of your works through copyleft.
 Licensing of creative works is an <em><strong>extremely</strong></em> tiresome topic so I keep all my opinions on intellectual property law contained to this page.</p>
@@ -82,12 +82,11 @@ Licensing of creative works is an <em><strong>extremely</strong></em> tiresome t
 Permissive licenses that require only attribution are as good as public domain when derivative versions of your work can be re-licensed and made proprietary, a normal copyrighted work with all rights reserved, making it legally unavailable for you to study, share and modify freely.</p>
 <p>As it stands, you can take anything from the <del>public</del> permissive domain, and not be required to contribute the resultant derivative work back into the same <del>public</del> permissive domain for others to use and benefit from, like you did initially.
 Re-licensing permissive works allows you to subscribe to the <em><strong>“fuck you, got mine™”</strong></em> school of creative freedom—the legal equivalent of pulling up the ladder up behind you.</p>
-<p>Copyleft licenses give you the legal framework to prevent this from happening to you or any future users of your works.</p>
 <div style="border-right: 2px;" class="aside right">
-<p>By far, the most prominent and egregious example is The Walt Disney Company
-who made their billions by <a href="https://derekkhanna.medium.com/disney-works-based-on-public-domain-eb49ac34c3da" title="Disney works based on the public domain">plundering public domain stories</a> and characters throughout the 20th century
-and then successfully lobbied to extend US copyright protections well past the practical limits of human lifespan—so that no individual or company in this century could ever do the same with Disney’s own works through the <a href="https://en.wikipedia.org/wiki/Copyright_Term_Extension_Act" title="Sonny Bono Copyright Term Extension Act of 1998">Sonny Bono Act of 1998</a>.</p>
+<p>By far, the most prominent and egregious example is The Walt Disney Company,
+who, throughout the 20th century, made billions through the plundering and retelling of <a href="https://derekkhanna.medium.com/disney-works-based-on-public-domain-eb49ac34c3da" title="Disney works based on the public domain">public domain stories and characters</a>. Then they paid it forward by successfully lobbying to extend US copyright protections through the <a href="https://en.wikipedia.org/wiki/Copyright_Term_Extension_Act" title="Sonny Bono Copyright Term Extension Act of 1998">Sonny Bono Act of 1998</a>, pushing enforcable copyright terms well past the practical limits of human lifespan<sup class="footnote-ref"><a href="#fn1" id="fnref1">1</a></sup>, all so no one in this century or the next could ever do the same with Disney’s own cultural works.</p>
 </div>
+<p>Copyleft licenses give you the legal framework to prevent this from happening to you or any future users of your works.</p>
 <p>When you remove all legal barriers for re-licensing of creative works, <a href="https://www.cs.vu.nl/~ast/intel/" title="Permissively licensed OS is used by Intel in the most prolific spyware implementation in the world.">people will do so</a>, and some might feel so emboldened they won’t even attribute you.</p>
 <p>So long as intellectual property law continues to exist in its current form, copyleft licenses are the key to guaranteeing creative freedoms to users of your work, no matter how trivial.
 You should reject permissive licenses in all their forms, and spit on all their advocates!</p>
@@ -99,6 +98,15 @@ to use your copyrighted work as they wish in exchange for royalties, money, gain
 <p>Your copyright is still legally yours, some rights reserved, and will continue to be for the rest of your life plus 70 years.
 A copyleft license only give <a href="https://www.gnu.org/philosophy/free-sw.en.html#four-freedoms" title="FSF definition of free software">selected rights</a> to the general public, with the expectations that those rights stay intact for all future users.
 In effect, you can <em>“sell out”</em> without truly <em>selling out</em> your or your user’s creative freedoms.</p>
+<section class="footnotes">
+<ol>
+<li id="fn1">
+<p>As it turned out, extending copyright terms to “forever” wasn’t considered constiutional,
+and “forever minus one day” would be legally difficult to define, so they settled for 120 years for corporate authorship.</p>
+<p>— <a href="https://www.congress.gov/congressional-record/volume-144/issue-139/house-section/article/H9946-1#:~:text=Actually%2C%20Sonny%20wanted,that%20next%20Congress.">October 7, 1998, Congressional Record Vol. 144, No. 139, pp. H9952</a> <a href="#fnref1" class="footnote-backref">↩</a></p>
+</li>
+</ol>
+</section>
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
@@ -109,7 +117,7 @@ In effect, you can <em>“sell out”</em> without truly <em>selling out</em> yo
 		</a>
 	</span>
 	<p>written materials <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, source code <a href="https://www.gnu.org/licenses/gpl-3.0">GNU GPLv3+</a>
-	— &#169; <del>2009</del> 2015-2022 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br/>
+	— &#169; 2015-2022 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br/>
 	Powered by <a href="https://github.com/microsounds/kagami">kagami v0.6.5 — static microblog processor</a></p>
 </div>
 </div> <!-- end of content -->
