--- a/index.htm
+++ b/index.htm
@@ -151,7 +151,7 @@ b+cl ZKFn fyFl VKKY SxFU Yq5m pymZ pBcZ JAR/ fkH1 AAAA
 		</a>
 	</span>
 	<p>written materials <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, source code <a href="https://www.gnu.org/licenses/gpl-3.0">GNU GPLv3+</a>
-	— &#169; <del>2009</del> 2015-2022 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br/>
+	— &#169; 2015-2022 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br/>
 	Powered by <a href="https://github.com/microsounds/kagami">kagami v0.6.5 — static microblog processor</a></p>
 </div>
 </div> <!-- end of content -->
