Added some blurbs from GPT-3

--- a/index.htm
+++ b/index.htm
@@ -43,7 +43,7 @@
 <p>This is my little sanctuary where I bottle up the unix computer zealot in me, you can call me <code>microsounds</code> if you want.</p>
 <p>I like <del>muted pastels,</del> starry night skies, people watching and the <a href="https://files.catbox.moe/gn20dj.pdf" title="Bell System Technical Journal Vol. 57, No. 6, Part 2, pp. 1905- (July-Aug. 1978), Dennis Ritchie, Ken Thompson">unix</a> <a href="http://files.catwell.info/misc/mirror/the-unix-programming-environment-kernighan-pike.pdf" title="The Unix Programming Environment (1984), Brian Kernighan, Rob Pike">programming</a> <a href="http://www.catb.org/~esr/writings/taoup/html/" title="The Art of Unix Programming (2003), Eric S. Raymond">environment</a>.</p>
 <div class="aside right">
-<p><em>“I bet you have soft hands and have trouble in loud environments”</em><br/>
+<p>“I bet you have soft hands and have trouble in loud environments”<br/>
 — <a href="https://desuarchive.org/g/thread/85512771/#85561792">/g/ post No.85561792</a></p>
 </div>
 <p>The echoes of the old world I once loved and lost have grown dissonant and almost unrecognizable,
@@ -55,9 +55,13 @@ Sometimes, I’ll do this to force myself to try new things.</p>
 <div class="right" style="filter: grayscale(65%); font-style: italic;">
 <p>I wanted to encourage others to share their knowledge, their lived experiences, dreams and desires through the low tech and pseudononymous nature of the free and open web.
 So I wrote a static site generator and rolled my own superset of markdown to author this site as my personal sandbox.</p>
+<div class="aside">
+<p>“This is a website for a person who is nostalgic for the past. They remember fondly the world they used to know, and although it has all but disappeared, they can still make out the last remnants of it. They want to share their memories with others who may feel the same way and create a community of like-minded people.” <br/>
+— <strong>OpenAI GPT-3</strong> after being <a href="https://simonwillison.net/2022/Sep/12/prompt-injection/">prompt injected</a> with this website.</p>
+</div>
 <p>I would be lying if I said I was interested in long form writing, I want to share what I like through the lens of metaprogramming and have fun doing it.</p>
 <p>It’s a never-ending process.</p>
-<p><a href="notes/dotfiles.htm" title="It's pretty fun though."><img src="/static/shimemiku/shime33.png" alt="ico-scripts" /></a></p>
+<p><a href="notes/dotfiles.htm" title="It's pretty fun though."><img src="/static/shimemiku/miku.gif" alt="ico-scripts" /></a></p>
 <!-- firefox renders this hr element above this entire floated div if not placed here -->
 <hr style="width: 70%;
 	border-width: 5px;
