--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -34,9 +34,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
-<!-- updated 2022/7/4 -->
+<!-- updated 2022/10/8 -->
 <h1>My Collection of Assorted Figurines<span id="My-Collection-of-Assorted-Figurines"></span></h1>
-<p>Last updated 🌖 Mon, Jul 4th, 2022</p>
+<p>Last updated 🌑 Sat, Oct 8th, 2022</p>
 <p>Here’s my small IRL collection of figurines and other assorted cute things.
 Most are “prize figures” of the variety you could win from a Japanese <a href="https://www.youtube.com/watch?v=93c9oTU7ut0">“skill” claw machine</a>.
 Unfortunately, I live an ocean away from a <em>UFO catcher</em> full of figurines of my <a href="https://www.youtube.com/watch?v=NzEKNzlhJSU">one and only muse</a>, so I can only buy them.</p>
@@ -99,6 +99,7 @@ Do not assume that physical outlets located in shopping malls, indoor or outdoor
 
 var figs = [
 	/* ids prepended with x are knockoffs */
+	[ '1251026', 'bandai q posket miku type a' ],
 	[ '944728', 'furyu miku bicute bunnies' ],
 	[ '1311067', 'miku artist masterpiece princess alice' ],
 	[ '1268909', 'miku artist masterpiece 14th anniv.' ],
