Added dynamic subtitles, made static subtitle more descriptive

--- a/.kagami/head.htm
+++ b/.kagami/head.htm
@@ -21,7 +21,7 @@
 	</a>
 	<div class="container">
 		<div class="title"><a href="{DOC_ROOT}/index.htm">{SITE_TITLE}</a></div>
-		<div class="subtitle">{SITE_DESCRIPTION}</div>
+		<div class="subtitle" id="subtitle">{SITE_DESCRIPTION}</div>
 		<ul>
 			<li><a id="bgm_toggle" href="javascript:play()">♫ play</a></li>
 			<li><a href="{GIT_REMOTE}">my github</a></li>
