--- a/notes/dotfiles.htm
+++ b/notes/dotfiles.htm
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8"/>
 	<meta name="theme-color" content="#E2FAF9"/>
-	<meta name="description" content="the echoes of time stand still"/>
+	<meta name="description" content="unix and post-ironic anemoia, µsounds' starlit diary"/>
 	<meta name="keywords" content="unix, linux, gnu/linux, debian, computers, computing, shell scripting, dotfiles, scripting, programming, metaprogramming, documentation, foss, open source, free software, git, github, moon phase, teal, cyan, pink, starry night skies, pastel, anime, music, iridescent, sibilant, sentimental, microsounds, eternity, jealosy, decay, 2007 is eternal, now and forever, lucky star, vocaloid, hatsune miku, 初音ミク, 39, sankyuu, shimeji, japan, weeaboo, weeb, old web, web 1.0, neocities, geocities, blog, microblog, static website, personal website"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<meta name="google-site-verification" content="Yn_X0a7RyXs1GuMzbXL2g3P-tH1A29W_6yyG6M8oBnk"/>
@@ -21,7 +21,7 @@
 	</a>
 	<div class="container">
 		<div class="title"><a href="/index.htm">sentimental µsounds</a></div>
-		<div class="subtitle">the echoes of time stand still</div>
+		<div class="subtitle" id="subtitle">unix and post-ironic anemoia, µsounds' starlit diary</div>
 		<ul>
 			<li><a id="bgm_toggle" href="javascript:play()">♫ play</a></li>
 			<li><a href="https://github.com/microsounds">my github</a></li>
