--- a/index.htm
+++ b/index.htm
@@ -95,6 +95,12 @@ So I wrote a static site generator and rolled my own superset of markdown to aut
 <li><em>(2016)</em> <em><strong>[retired]</strong></em> command-line utility for scraping Bandcamp albums — <a href="https://github.com/microsounds/bc-dl"><code>microsounds/bc-dl</code></a></li>
 <li><em>(2016)</em> command-line stack-based RPN calculator — <a href="https://github.com/microsounds/hpsh"><code>microsounds/hpsh</code></a></li>
 </ul>
+<h2>Even older<span id="Even-older"></span></h2>
+<ul>
+<li><em>(2012-2015)</em> <span class="blink" style="color: #FFA5B5;"><em>NSFW!</em></span>
+a collection of <em>“About Mes”</em> previously published on Last.fm
+— <a href="/misc/last-fm.htm"><code>/misc/last-fm.htm</code></a></li>
+</ul>
 <h2>Contact me<span id="Contact-me"></span></h2>
 <p>If it’s about a project or a page on this website, open an issue or a pull request on GitHub at one of the links above.</p>
 <p><span class="blink" style="color: #FFFF00;"><em>New!</em></span> —
