--- a/notes/why-copyleft.htm
+++ b/notes/why-copyleft.htm
@@ -31,6 +31,13 @@
 		</ul>
 	</div>
 </div>
+<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+	<filter id="cloud-filter">
+		<feTurbulence type="fractalNoise" baseFrequency=".01" numOctaves="10"/>
+		<feDisplacementMap in="SourceGraphic" scale="240"/>
+	</filter>
+</svg>
+<div class="cloud-cover"></div>
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- posted 2022/2/5 -->
