Revalidated as XHTML5, syntax style

--- a/.kagami/head.htm
+++ b/.kagami/head.htm
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
 <head>
-	<meta charset="UTF-8"/>
-	<meta name="theme-color" content="{ACCENT_COLOR}"/>
-	<meta name="description" content="{SITE_DESCRIPTION}"/>
-	<meta name="keywords" content="{KEYWORDS}"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-	<meta name="google-site-verification" content="Yn_X0a7RyXs1GuMzbXL2g3P-tH1A29W_6yyG6M8oBnk"/>
-	<link rel="shortcut icon" type="image/x-icon" href="{DOC_ROOT}/static/sky.ico"/>
-	<link rel="stylesheet" type="text/css" href="{DOC_ROOT}/static/style.css"/>
-	<link rel="alternate" type="application/rss+xml" href="{DOC_ROOT}/rss.xml" title="{SITE_TITLE}"/>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta name="theme-color" content="{ACCENT_COLOR}" />
+	<meta name="description" content="{SITE_DESCRIPTION}" />
+	<meta name="keywords" content="{KEYWORDS}" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="google-site-verification" content="Yn_X0a7RyXs1GuMzbXL2g3P-tH1A29W_6yyG6M8oBnk" />
+	<link rel="shortcut icon" type="image/x-icon" href="{DOC_ROOT}/static/sky.ico" />
+	<link rel="stylesheet" type="text/css" href="{DOC_ROOT}/static/style.css" />
+	<link rel="alternate" type="application/rss+xml" href="{DOC_ROOT}/rss.xml" title="{SITE_TITLE}" />
 	<script type="text/javascript" src="{DOC_ROOT}/static/script.js"></script>
 	<title>{TITLE} | {SITE_TITLE}</title>
 </head>
@@ -17,7 +17,7 @@
 <audio hidden="hidden" id="bgm"></audio>
 <div class="navbar">
 	<a href="{DOC_ROOT}/index.htm">
-		<img class="avatar" alt="avatar" src="{DOC_ROOT}/static/avatar.png"/>
+		<img class="avatar" alt="avatar" src="{DOC_ROOT}/static/avatar.png" />
 	</a>
 	<div class="container">
 		<div class="title"><a href="{DOC_ROOT}/index.htm">{SITE_TITLE}</a></div>
@@ -27,7 +27,7 @@
 			<li><a href="{GIT_REMOTE}">my github</a></li>
 			<li><a href="{DOC_ROOT}/notes/dotfiles.htm">my dotfiles</a></li>
 			<li><a href="{DOC_ROOT}/notes/index.htm">my notes</a></li>
-			<li><a href="{DOC_ROOT}/rss.xml">rss <img alt="rss" class="icon" src="{DOC_ROOT}/static/button/rss.svg"/></a></li>
+			<li><a href="{DOC_ROOT}/rss.xml">rss <img alt="rss" class="icon" src="{DOC_ROOT}/static/button/rss.svg" /></a></li>
 		</ul>
 	</div>
 </div>
