--- a/index.htm
+++ b/index.htm
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
 <head>
-	<meta charset="UTF-8"/>
-	<meta name="theme-color" content="#E2FAF9"/>
-	<meta name="description" content="unix and post-ironic anemoia, µsounds' starlit diary"/>
-	<meta name="keywords" content="unix, linux, gnu/linux, debian, computers, computing, shell scripting, dotfiles, scripting, programming, metaprogramming, documentation, foss, open source, free software, git, github, moon phase, teal, cyan, pink, starry night skies, pastel, anime, music, iridescent, sibilant, sentimental, microsounds, eternity, jealosy, decay, 2007 is eternal, now and forever, lucky star, vocaloid, hatsune miku, 初音ミク, 39, sankyuu, shimeji, japan, weeaboo, weeb, old web, web 1.0, neocities, geocities, blog, microblog, static website, personal website"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-	<meta name="google-site-verification" content="Yn_X0a7RyXs1GuMzbXL2g3P-tH1A29W_6yyG6M8oBnk"/>
-	<link rel="shortcut icon" type="image/x-icon" href="/static/sky.ico"/>
-	<link rel="stylesheet" type="text/css" href="/static/style.css"/>
-	<link rel="alternate" type="application/rss+xml" href="/rss.xml" title="sentimental µsounds"/>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta name="theme-color" content="#E2FAF9" />
+	<meta name="description" content="unix and post-ironic anemoia, µsounds' starlit diary" />
+	<meta name="keywords" content="unix, linux, gnu/linux, debian, computers, computing, shell scripting, dotfiles, scripting, programming, metaprogramming, documentation, foss, open source, free software, git, github, moon phase, teal, cyan, pink, starry night skies, pastel, anime, music, iridescent, sibilant, sentimental, microsounds, eternity, jealosy, decay, 2007 is eternal, now and forever, lucky star, vocaloid, hatsune miku, 初音ミク, 39, sankyuu, shimeji, japan, weeaboo, weeb, old web, web 1.0, neocities, geocities, blog, microblog, static website, personal website" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="google-site-verification" content="Yn_X0a7RyXs1GuMzbXL2g3P-tH1A29W_6yyG6M8oBnk" />
+	<link rel="shortcut icon" type="image/x-icon" href="/static/sky.ico" />
+	<link rel="stylesheet" type="text/css" href="/static/style.css" />
+	<link rel="alternate" type="application/rss+xml" href="/rss.xml" title="sentimental µsounds" />
 	<script type="text/javascript" src="/static/script.js"></script>
 	<title>Homepage | sentimental µsounds</title>
 </head>
@@ -17,7 +17,7 @@
 <audio hidden="hidden" id="bgm"></audio>
 <div class="navbar">
 	<a href="/index.htm">
-		<img class="avatar" alt="avatar" src="/static/avatar.png"/>
+		<img class="avatar" alt="avatar" src="/static/avatar.png" />
 	</a>
 	<div class="container">
 		<div class="title"><a href="/index.htm">sentimental µsounds</a></div>
@@ -27,7 +27,7 @@
 			<li><a href="https://github.com/microsounds">my github</a></li>
 			<li><a href="/notes/dotfiles.htm">my dotfiles</a></li>
 			<li><a href="/notes/index.htm">my notes</a></li>
-			<li><a href="/rss.xml">rss <img alt="rss" class="icon" src="/static/button/rss.svg"/></a></li>
+			<li><a href="/rss.xml">rss <img alt="rss" class="icon" src="/static/button/rss.svg" /></a></li>
 		</ul>
 	</div>
 </div>
@@ -36,7 +36,7 @@
 <!--kagami v0.6.5 — static microblog processor-->
 <h1>Homepage<span id="Homepage"></span></h1>
 <noscript>
-	<em>You have JavaScript disabled, certain multimedia elements will not work as expected.</em>
+	<p><em>You have JavaScript disabled, certain multimedia elements will not work as expected.</em></p>
 </noscript>
 <p><img src="/static/starry.jpg" alt="heading" />
 <span class="aside"><sup><em>Original illustration <a href="https://gelbooru.com/index.php?page=post&amp;s=view&amp;id=3757995">© 2015 tanakatam</a></em></sup></span></p>
@@ -155,7 +155,7 @@ b+cl ZKFn fyFl VKKY SxFU Yq5m pymZ pBcZ JAR/ fkH1 AAAA
 	<span class="right" style="padding-left: 5px">
 		<a title="visitors since 2022" href="https://digits.net">
 			<img style="height: 1.3em;" alt="counter"
-				src="https://counter.digits.net/?counter=%7Bc670b40d-4ee8-9e24-9d82-2ee79a5b1f54%7D&amp;template=simple&amp;background=647975&amp;charset=25"/>
+				src="https://counter.digits.net/?counter=%7Bc670b40d-4ee8-9e24-9d82-2ee79a5b1f54%7D&amp;template=simple&amp;background=647975&amp;charset=25" />
 			vistors
 		</a>
 	</span>
