--- a/notes/why-copyleft.htm
+++ b/notes/why-copyleft.htm
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
 <head>
-	<meta charset="UTF-8"/>
-	<meta name="theme-color" content="#E2FAF9"/>
-	<meta name="description" content="unix and post-ironic anemoia, µsounds' starlit diary"/>
-	<meta name="keywords" content="unix, linux, gnu/linux, debian, computers, computing, shell scripting, dotfiles, scripting, programming, metaprogramming, documentation, foss, open source, free software, git, github, moon phase, teal, cyan, pink, starry night skies, pastel, anime, music, iridescent, sibilant, sentimental, microsounds, eternity, jealosy, decay, 2007 is eternal, now and forever, lucky star, vocaloid, hatsune miku, 初音ミク, 39, sankyuu, shimeji, japan, weeaboo, weeb, old web, web 1.0, neocities, geocities, blog, microblog, static website, personal website"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-	<meta name="google-site-verification" content="Yn_X0a7RyXs1GuMzbXL2g3P-tH1A29W_6yyG6M8oBnk"/>
-	<link rel="shortcut icon" type="image/x-icon" href="/static/sky.ico"/>
-	<link rel="stylesheet" type="text/css" href="/static/style.css"/>
-	<link rel="alternate" type="application/rss+xml" href="/rss.xml" title="sentimental µsounds"/>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta name="theme-color" content="#E2FAF9" />
+	<meta name="description" content="unix and post-ironic anemoia, µsounds' starlit diary" />
+	<meta name="keywords" content="unix, linux, gnu/linux, debian, computers, computing, shell scripting, dotfiles, scripting, programming, metaprogramming, documentation, foss, open source, free software, git, github, moon phase, teal, cyan, pink, starry night skies, pastel, anime, music, iridescent, sibilant, sentimental, microsounds, eternity, jealosy, decay, 2007 is eternal, now and forever, lucky star, vocaloid, hatsune miku, 初音ミク, 39, sankyuu, shimeji, japan, weeaboo, weeb, old web, web 1.0, neocities, geocities, blog, microblog, static website, personal website" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="google-site-verification" content="Yn_X0a7RyXs1GuMzbXL2g3P-tH1A29W_6yyG6M8oBnk" />
+	<link rel="shortcut icon" type="image/x-icon" href="/static/sky.ico" />
+	<link rel="stylesheet" type="text/css" href="/static/style.css" />
+	<link rel="alternate" type="application/rss+xml" href="/rss.xml" title="sentimental µsounds" />
 	<script type="text/javascript" src="/static/script.js"></script>
 	<title>On Copyleft and why I use GPLv3 | sentimental µsounds</title>
 </head>
@@ -17,7 +17,7 @@
 <audio hidden="hidden" id="bgm"></audio>
 <div class="navbar">
 	<a href="/index.htm">
-		<img class="avatar" alt="avatar" src="/static/avatar.png"/>
+		<img class="avatar" alt="avatar" src="/static/avatar.png" />
 	</a>
 	<div class="container">
 		<div class="title"><a href="/index.htm">sentimental µsounds</a></div>
@@ -27,7 +27,7 @@
 			<li><a href="https://github.com/microsounds">my github</a></li>
 			<li><a href="/notes/dotfiles.htm">my dotfiles</a></li>
 			<li><a href="/notes/index.htm">my notes</a></li>
-			<li><a href="/rss.xml">rss <img alt="rss" class="icon" src="/static/button/rss.svg"/></a></li>
+			<li><a href="/rss.xml">rss <img alt="rss" class="icon" src="/static/button/rss.svg" /></a></li>
 		</ul>
 	</div>
 </div>
@@ -85,7 +85,7 @@ Permissive licenses that require only attribution are as good as public domain w
 Re-licensing permissive works allows you to subscribe to the <em><strong>“fuck you, got mine™”</strong></em> school of creative freedom—the legal equivalent of pulling up the ladder up behind you.</p>
 <div style="border-right: 2px;" class="aside right">
 <p>By far, the most prominent and egregious example is The Walt Disney Company,
-who, throughout the 20th century, made billions through the plundering and retelling of <a href="https://derekkhanna.medium.com/disney-works-based-on-public-domain-eb49ac34c3da" title="Disney works based on the public domain">public domain stories and characters</a>. Then they paid it forward by successfully lobbying to extend US copyright protections through the <a href="https://en.wikipedia.org/wiki/Copyright_Term_Extension_Act" title="Sonny Bono Copyright Term Extension Act of 1998">Sonny Bono Act of 1998</a>, pushing enforcable copyright terms well past the practical limits of human lifespan<sup class="footnote-ref"><a href="#fn1" id="fnref1">1</a></sup>, all so no one in this century or the next could ever do the same with Disney’s own cultural works.</p>
+who, throughout the 20th century, made billions through the plundering and retelling of <a href="https://derekkhanna.medium.com/disney-works-based-on-public-domain-eb49ac34c3da" title="Disney works based on the public domain">public domain stories and characters</a>. Then they paid it forward by successfully lobbying to extend US copyright protections through the <a href="https://en.wikipedia.org/wiki/Copyright_Term_Extension_Act" title="Sonny Bono Copyright Term Extension Act of 1998">Sonny Bono Act of 1998</a>, pushing enforceable copyright terms well past the practical limits of human lifespan<sup class="footnote-ref"><a href="#fn1" id="fnref1">1</a></sup>, all so no one in this century or the next could ever do the same with Disney’s own cultural works.</p>
 </div>
 <p>Copyleft licenses give you the legal framework to prevent this from happening to you or any future users of your works.</p>
 <p>When you remove all legal barriers for re-licensing of creative works, <a href="https://www.cs.vu.nl/~ast/intel/" title="Permissively licensed OS is used by Intel in the most prolific spyware implementation in the world.">people will do so</a>, and some might feel so emboldened they won’t even attribute you.</p>
@@ -102,7 +102,7 @@ In effect, you can <em>“sell out”</em> without truly <em>selling out</em> yo
 <section class="footnotes">
 <ol>
 <li id="fn1">
-<p>As it turned out, extending copyright terms to “forever” wasn’t considered constiutional,
+<p>As it turned out, extending copyright terms to “forever” wasn’t considered constitutional,
 and “forever minus one day” would be legally difficult to define, so they settled for 120 years for corporate authorship.</p>
 <p>— <a href="https://www.congress.gov/congressional-record/volume-144/issue-139/house-section/article/H9946-1#:~:text=Actually%2C%20Sonny%20wanted,that%20next%20Congress.">October 7, 1998, Congressional Record Vol. 144, No. 139, pp. H9952</a> <a href="#fnref1" class="footnote-backref">↩</a></p>
 </li>
@@ -113,7 +113,7 @@ and “forever minus one day” would be legally difficult to define, so they se
 	<span class="right" style="padding-left: 5px">
 		<a title="visitors since 2022" href="https://digits.net">
 			<img style="height: 1.3em;" alt="counter"
-				src="https://counter.digits.net/?counter=%7Bc670b40d-4ee8-9e24-9d82-2ee79a5b1f54%7D&amp;template=simple&amp;background=647975&amp;charset=25"/>
+				src="https://counter.digits.net/?counter=%7Bc670b40d-4ee8-9e24-9d82-2ee79a5b1f54%7D&amp;template=simple&amp;background=647975&amp;charset=25" />
 			vistors
 		</a>
 	</span>
