ls-dotfiles: Malformed video tags, changing global macro PC_NAME

--- a/notes/dotfiles.htm
+++ b/notes/dotfiles.htm
@@ -154,7 +154,7 @@ This is just an <a href="https://github.com/microsounds/microsounds.github.io/ra
 </ul>
 <p>Detailed installation instructions are provided, along with some documentation for the most essential components.</p>
 <!-- figure 1: desktop screenshot -->
-<p><video alt="scrot" loop="loop" autoplay="autoplay" muted="muted" 		type="video/webm" src="https://raw.githubusercontent.com/microsounds/microsounds/master/dotfiles/scrot.webm" /><br/>
+<p><video loop="loop" autoplay="autoplay" muted="muted"> 		<source type="video/webm" src="https://raw.githubusercontent.com/microsounds/microsounds/master/dotfiles/scrot.webm" /></video>
 <em>Pictured: Debian stable, a “graphical shell” environment consisting mostly of xorg, dwm, sxhkd and various urxvt clients.</em></p>
 <h1>Quick start<span id="Quick-start"></span></h1>
 <details style="background-color: #0000001C; padding: 3px;">
