--- a/misc/last-fm.htm
+++ b/misc/last-fm.htm
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="shortcut icon" type="image/x-icon" href="/static/sky.ico" />
 	<title>My Last.fm Profile (2012-2015) | sentimental µsounds</title>
-	<style>
+	<style type="text/css">
 		html {
 			font-family: "Liberation Sans", "Arial", "Helvetica", sans;
 			font-size: 11px; 
@@ -38,7 +38,6 @@
 </head>
 <body>
 <div class="boxquote" style="margin: 10px; padding: 10px; max-width: 600px;">
-
 	<a href="../">
 		<img src="/static/button/badge.png" /><br/>
 		<em>Return to sentimental µsounds</em>
@@ -355,4 +354,3 @@
 </body>
 
 </html>
-
