notes/figures: Updated section on counterfeits

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -35,12 +35,12 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
-<!-- updated 2022/10/8 -->
+<!-- updated 2022/10/21 -->
 <h1>My Collection of Assorted Figurines<span id="My-Collection-of-Assorted-Figurines"></span></h1>
-<p>Last updated 🌑 Sat, Oct 8th, 2022</p>
-<p>Here’s my small IRL collection of figurines and other assorted cute things.
-Most are “prize figures” of the variety you could win from a Japanese <a href="https://www.youtube.com/watch?v=93c9oTU7ut0">“skill” claw machine</a>.
-Unfortunately, I live an ocean away from a <em>UFO catcher</em> full of figurines of my <a href="https://www.youtube.com/watch?v=NzEKNzlhJSU">one and only muse</a>, so I can only buy them.</p>
+<p>Last updated 🌔 Fri, Oct 21st, 2022</p>
+<p>Here’s my small, yet growing IRL collection of figurines and other assorted cute things.
+Most are <em>“prize figures”</em> of the variety you could win from a Japanese <a href="https://www.youtube.com/watch?v=93c9oTU7ut0">“skill” claw machine</a>.
+Unfortunately, I live an ocean away from a <em>UFO catcher</em> full of figurines of my favorite <a href="https://www.youtube.com/watch?v=NzEKNzlhJSU">virtual idol</a>, so I can only buy them.</p>
 <p>I don’t feel like actually making an account on <em><a href="https://myfigurecollection.net">myfigurecollection.net</a></em> to tell people about them though.
 This page will do for now, links take you to their catalog entry on <em>mfc</em>.</p>
 <h2>Collection<span id="Collection"></span></h2>
@@ -68,15 +68,26 @@ This page will do for now, links take you to their catalog entry on <em>mfc</em>
 </tr>
 <tr>
 <td><img src="https://static.myfigurecollection.net/upload/items/186.jpg" alt="ico-fig-fake" /></td>
-<td><strong>Fake/Knockoff</strong></td>
+<td><strong>Fake/Bootleg</strong></td>
 </tr>
 </tbody>
 </table>
 </div>
 <h2>On Counterfeits<span id="On-Counterfeits"></span></h2>
-<p>If you’re into figure collecting, take care not to fall for counterfeits, these are figures of varying quality sold at abnormal prices and/or designs that are years out of production being sold new.
-Do not assume that physical outlets located in shopping malls, indoor or outdoor swap meets are honest or have any clue what they are selling, they can and will play dumb if it suits them.
-<em>Understand that even if the price is right, with counterfeits, you will get exactly what you pay for.</em></p>
+<p>If you’re into figure collecting, take care not to fall for counterfeit figures of varying quality sold at abnormally low prices, usually imitating designs that are years out of production, yet being sold new in box.</p>
+<p>In years past, only elaborate and expensive lines of figures would see bootlegging but now even inexpensive prize figures quickly get imitations mere months after release.
+I remember when <em>“replica”</em> nendoroids were a fringe hobby good relegated to the depths of untrustworthy Chinese e-commerce sites, they only cost 20% what a real one would cost, including the shipping.</p>
+<p>Do not assume that physical outlets located in shopping malls, indoor or outdoor swap meets are honest or have any clue what they are selling, they can and will play dumb if it suits them. Some are egregious enough to sell fakes at genuine prices to low-information buyers.</p>
+<p>Some tell-tale signs include:</p>
+<ul>
+<li>box artwork that omits manufacturer logos and brand names</li>
+<li>screenprinted eyes that have a bizarre skew or just look “off”</li>
+<li>individual parts that won’t fit together correctly or won’t stay snug</li>
+<li>paint fading quickly even in interior lights from store displays</li>
+<li>ABS plastics yellowing, PVC vinyls leaking plasticizer and turning sticky</li>
+<li>sloppy paint, gloppy paint and paint overspray, a complete disregard for quality</li>
+</ul>
+<p>Quality can vary varies wildly with knockoffs, they consistently teeter the line between <strong>garbage</strong> and <strong>barely acceptable</strong> <em>(from one viewing angle)</em>, they have no resale or collectible value if you care about that sort of thing, you get what you pay for, generally.</p>
 <h2>Bonus Gallery<span id="Bonus-Gallery"></span></h2>
 <p>This gallery is automatically generated, click images to see more user-submitted images on <em>myfigurecollection.net</em>!</p>
 <div class="gallery" id="fig-gallery">
